--- a/languages/ru/messages.ini
+++ b/languages/ru/messages.ini
@@ -10,7 +10,7 @@ btn.no=Нет
 btn.no.cancel=Нет, отмена
 btn.yes=Да
 btn.yes.rewrite=Да, перезаписать
-btn.exit.dn=Выход из DevelNext
+btn.exit.dn=Выход из DevelWare
 btn.resume=Продолжить
 
 # EXIT
@@ -26,7 +26,7 @@ exit.project.abort=Отмена, не закрывать среду
 
 error.unknown.title=Непредвиденная ошибка
 error.unknown.message=Возникла неожиданная ошибка, пожалуйста нажмите сюда, чтобы узнать подробности.
-error.unknown.help.text=Произошла ошибка в DevelNext, сообщите об этом авторам.
+error.unknown.help.text=Произошла ошибка в DevelWare, сообщите об этом авторам.
 error.title=Ошибка
 error.in.file=Ошибка в файле '%s'
 error.at.line=на строке %s
@@ -47,14 +47,7 @@ menu.help.diagnostic=Диагностика среды
 menu.help.site=Официальный сайт
 menu.help.youtube=YouTube канал
 menu.help.vk=VK группа
-menu.help.check.updates=Поиск обновлений DevelNext
 menu.help.about=О проекте
-
-# ACCOUNT
-account.my=Мой Аккаунт
-account.log.in=Войти в аккаунт
-account.server.unavailable=Сервер недоступен
-account.update.service.unavailable.message=Сервис обновлений недоступен, попробуйте проверить обновления позже.
 
 # TOASTS
 toast.project.save.done=Проект успешно сохранен
