--- a/languages/uk/description.ini
+++ b/languages/uk/description.ini
@@ -1,8 +1,7 @@
+name=Українська
+name.ru=Русский
+name.en=English
 
-name=Український
-name.ru=Украинский
-name.en=Ukrainian
-
-restart.message=Для застосування налаштувань необхідно перезапустити програму!
+restart.message=Щоб застосувати налаштування, потрібно перезапустити програму!
 restart.yes=Перезапустити зараз
 restart.no=Пізніше
