--- a/languages/en/messages.ini
+++ b/languages/en/messages.ini
@@ -1,32 +1,31 @@
-
-msg.title=Messages
+msg.title=Message
 
 # BUTTONS
-btn.ok=Yes
+btn.ok=OK
 btn.apply=Apply
-btn.cancel=Cancellation
+btn.cancel=Cancel
 btn.copy=Copy
 btn.no=No
-btn.no.cancel=No , cancellation
+btn.no.cancel=No, cancel
 btn.yes=Yes
-btn.yes.rewrite=yes re-record
-btn.exit.dn=Leave from DevelWare
-btn.resume=Continue
+btn.yes.rewrite=Yes, rewrite
+btn.exit.dn=Exit DevelWare
+btn.resume=Resume
 
 # EXIT
-exit.message=Are you sure you want to leave the environment?
-exit.yes=Yes , leave
-exit.no=no
+exit.message=Are you sure to exit this program?
+exit.yes=Yes, exit
+exit.no=No
 
 exit.project.title=Closing the project
-exit.project.message=Do you want to open the current project (%s) the next time you start the environment?
-exit.project.yes=Yes , open project
+exit.project.message=Do you want to open the project (%s) the next time?
+exit.project.yes=Yes, open project
 exit.project.no=No
-exit.project.abort=Cancel, do not close the environment
+exit.project.abort=Cancel, don't close ide
 
-error.unknown.title=Unexpected error
-error.unknown.message=An unexpected error occurred, please click here for details.
-error.unknown.help.text=An error has occurred in DevelWare, the authors are notified.
+error.unknown.title=Unknown Error
+error.unknown.message=Unexpected error occurred, please click here for more details.
+error.unknown.help.text=Error occurred in DevelWare, please report it to the authors.
 error.title=Error
 error.in.file=Error in file '%s'
 error.at.line=on line %s
@@ -37,91 +36,86 @@ menu.run=Run
 menu.help=Help
 
 menu.project.new=New Project
-menu.project.open=Open project
+menu.project.open=Open Project
 menu.project.save=Save
-menu.project.save.as.archive=Save as archive
-menu.project.save.in.library=Save project to library
-menu.project.close=Close project
-menu.exit=Leave
-menu.help.diagnostic=Environment Diagnostics
-menu.help.site=Offical WebSite
-menu.help.youtube=YouTube channel
-menu.help.vk=VK Group
-menu.help.check.updates=Search for DevelWare updates
-menu.help.about=About the project
-
-# ACCOUNT
-account.my=My account
-account.log.in=Log in in account
-account.server.unavailable=Server is not available
-account.update.service.unavailable.message=The update service is unavailable, try checking for updates later.
+menu.project.save.as.archive=Save as Archive
+menu.project.save.in.library=Save Project in Library
+menu.project.close=Close Project
+menu.exit=Exit
+menu.help.diagnostic=IDE Diagnostic
+menu.help.site=Official Site
+menu.help.youtube=YouTube channel (Russian)
+menu.help.vk=VK group (Russian)
+menu.help.about=About
 
 # TOASTS
-toast.project.save.done=The project was successfully saved
-toast.project.save.zip.done=The project was successfully saved in a zip archive
-toast.project.save.in.library.done=The project was successfully saved in the library
-toast.project.save.in.library.fail=Error, it is impossible to save the project in the library!
-toast.search.updates=Searching for updates ...
+toast.project.save.done=Project is saved
+toast.project.save.zip.done=Project is saved as zip-archive
+toast.project.save.in.library.done=Project is saved for the library.
+toast.project.save.in.library.fail=Error, failed to save project for the library!
+toast.search.updates=Searching updates...
 
 # ALERTS
-alert.project.export.fail=To export, you must open or create a project
-alert.project.save.in.library.fail=Create a new project to save it to the library.
-alert.last.version.installed=You are using the latest available version of the program.
+alert.project.export.fail=To export, open or create a project.
+alert.project.save.in.library.fail=Create a new project to save it for the library.
+alert.last.version.installed=The last version of DevelNext is installed!
 
 # CONFIRMS
-confirm.project.library.name.conflict=There is already a project with the same name in your library, do you want to overwrite it?
+confirm.project.library.name.conflict=Project with this name is already exists in your library, do you want rewrite it?
 
 # MISC
-prompt.enter.text=Enter text
+prompt.enter.text=Enter any text
 
 # WELCOME
 welcome.title=Welcome
-welcome.project.create=Create a project
-welcome.project.open=Open project
+welcome.project.create=Create Project
+welcome.project.open=Open Project
 
 # PROJECT NEW
-project.new.title=New project
-project.new.select.template=Select a template
+project.new.title=New Project
+project.new.select.template=Choice a template
 project.new.btn.create=Create
-project.new.directory=Projects folder
+project.new.directory=Directory of the projects
 project.new.name=Project name
-project.new.package.name=Project package name
-project.new.alert.select.template=Select a template for your project
-project.new.error.create.project.directory=Cannot create project folder
-project.new.error.name.required=Enter a name for the new project
-project.new.error.name.invalid=Please enter a valid project name suitable for your file system!
-project.new.error.package.invalid=Enter a valid project package name
-project.new.error.package.invalid.description=From 2 to 15 characters, only small English letters and '_'.
-project.new.toast.creating=Creating a Project ...
+project.new.package.name=Package name of Project
+project.new.alert.select.template=Please choice a template for the new project
+project.new.error.create.project.directory=Failed to create the directory of the projects
+project.new.error.name.required=Please specify the name of your project
+project.new.error.name.invalid=The name of your project is incorrect, specify a valid name for your file system!
+project.new.error.package.invalid=Please specify a correct name for project package.
+
+project.new.error.package.invalid.description=From 2 to 15 max length, only in lower case, latin and '_'.
+project.new.toast.creating=Creating the project ...
 
 # PROJECT GUI TEMPLATE
-project.template.gui.name=Desktop program
-project.template.gui.description=A program with a GUI interface to run on Linux/Windows/MacOS
+project.template.gui.name=Desktop Application
+project.template.gui.description=Application with GUI interface for Linux/Windows/Mac
+
 
 # PROJECT OPEN
-project.open.title=Open project
+project.open.title=Open Project
 project.open.action=Open
 project.open.action.delete=Delete
-project.open.error.unavailable=Error, the list of projects is not available.
-project.open.empty.list=The list of projects is empty.
+project.open.error.unavailable=Error, the project list is unavailable.
+project.open.empty.list=Project list is empty.
 project.open.unknown.project=Unknown project
 project.open.updated.at=Updated
-project.open.wait=Wait ...
+project.open.wait=Please wait ...
 project.open.view.count=Views
-project.open.download.count=DOnwloads
-project.open.clone.count=Cloning
-project.open.searching=Searching for projects, please wait ...
-project.open.error.delete.title=Uninstall error
-project.open.error.delete.description=The project folder was not completely deleted, it may be occupied by other programs.
-project.open.error=Error opening project
-project.open.fail.create.directory=Cannot create project folder
+project.open.download.count=Downloads
+project.open.clone.count=Clones
+project.open.searching=Scanning projects, please wait ...
+project.open.error.delete.title=Delete Error
+project.open.error.delete.description=The project directory was not completely deleted.
+project.open.error=Open project error
+project.open.fail.create.directory=Failed to create the directory of projects.
 project.open.empty.description=Project without description ...
 project.open.favorites=Favorites
-project.open.demos=Demo projects
+project.open.demos=Demo Projects
 project.open.library=Library
 project.open.public=Public
-project.open.public.desc=Your published projects on ---YOUR WEBSITE--
-project.open.file=Open another ...
-project.open.file.desc=Select a file or zip archive with a project and open
-project.open.favorite.directory=Favorites folder
+project.open.public.desc=Your shared projects on develnext.org
+project.open.file=Open other ...
+project.open.file.desc=Select a file or zip-archive with project and open
+project.open.favorite.directory=Directory of the projects
 
