--- a/languages/ru/description.ini
+++ b/languages/ru/description.ini
@@ -1,6 +1,7 @@
 
 name=Русский
 name.en=Russian
+name.uk=Російський
 
 restart.message=Для применения настроек необходимо перезапустить программу!
 restart.yes=Перезапустить сейчас
